--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "@truffle/hdwallet-provider": "^2.0.1",
     "bindings": "^1.5.0",
     "bootstrap": "^5.1.3",
+    "dotenv": "^14.3.2",
     "jquery": "^3.6.0",
     "truffle-contract": "^4.0.31",
     "truffle-hdwallet-provider": "^1.0.17",
